Cleaned up the tests to follow the assertion format discussed.